refactor : 테스트 코드 수정 및 복수 카드 전달 시 , Cards 객체 사용하도록 변경