@@ -19,10 +19,10 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 class DealerTest {
     @ParameterizedTest
     @DisplayName("canDrawCard() 호출 시, 카드가 16 이하이면 true 를 반환한다.")
-    @CsvSource(value = {"NINE:true", "JACK:false"},delimiter = ':')
-    void setUpStartingCards(final Number inputtedNumber,final boolean expect) {
+    @CsvSource(value = {"NINE:true", "JACK:false"}, delimiter = ':')
+    void setUpStartingCards(final Number inputtedNumber, final boolean expect) {
         //given
-        Dealer dealer = new Dealer(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, inputtedNumber)));
+        Dealer dealer = new Dealer(new Cards(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, inputtedNumber))));
 
         //when
         boolean actual = dealer.canDrawCard();
@@ -35,25 +35,25 @@ class DealerTest {
     @DisplayName("draw() 호출 시, 카드 한장을 받아 리스트에 추가한다.")
     void draw() {
         //given
-        Dealer dealer = new Dealer(
-                new ArrayList<>(Arrays.asList(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO))));
+        Dealer dealer = new Dealer(new Cards(
+                new ArrayList<>(Arrays.asList(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO)))));
         PlayingCard inputtedCard = of(Suit.SPADE, Number.KING);
-        List<PlayingCard> expect = List.of(
+        Cards expect = new Cards(new ArrayList<>(Arrays.asList(
                 of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO), of(Suit.SPADE, Number.KING)
-        );
+        )));
 
         //when
         dealer.draw(inputtedCard);
 
         //then
-        assertThat(dealer).isEqualTo(new Dealer(expect));
+        assertThat(dealer.getCards()).isEqualTo(new Dealer(expect).getCards());
     }
 
     @Test
     @DisplayName("getScore() 호출 시, 딜러의 스코어를 반환한다.")
     void getScore() {
         //given
-        Dealer dealer = new Dealer(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO)));
+        Dealer dealer = new Dealer(new Cards(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO))));
         int expectedScore = 9;
 
         //when
@@ -67,7 +67,7 @@ class DealerTest {
     @DisplayName("getCards() 호출 시, 카드를 모두 반환한다.")
     void getCards() {
         //given
-        Dealer dealer = new Dealer(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO)));
+        Dealer dealer = new Dealer(new Cards(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO))));
         Cards expect = new Cards(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO)));
 
         //when
